crates/pandalang/src/snapshots/pandalang__parser__tests__parses@bin_op__add_int.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/bin_op/add_int.panda
---
BinOp(
    BinOp {
        left: Int(
            Int {
                n: 1,
            },
        ),
        right: Int(
            Int {
                n: 1,
            },
        ),
        kind: Add,
    },
)
