crates/pandalang/src/snapshots/pandalang__parser__tests__parses@bin_op__add_var.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/bin_op/add_var.panda
---
Ok(
    BinOp(
        BinOp {
            left: Var(
                Var {
                    name: "a",
                },
            ),
            right: Var(
                Var {
                    name: "b",
                },
            ),
            kind: Add,
        },
    ),
)
