crates/pandalang/src/snapshots/pandalang__parser__tests__parses@bin_op__mul_int.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: test(path)
input_file: crates/pandalang/src/snapshot_inputs/bin_op/mul_int.panda
---
Ok(
    BinOp(
        BinOp {
            left: Int(
                Int {
                    n: 1,
                },
            ),
            right: Int(
                Int {
                    n: 1,
                },
            ),
            kind: Mul,
        },
    ),
)
