crates/pandalang/src/snapshots/pandalang__parser__tests__parses@bin_op__prec2.panda.snap
---
source: crates/pandalang/src/parser.rs
expression: source
input_file: crates/pandalang/src/snapshot_inputs/bin_op/prec2.panda
---
BinOp(
    BinOp {
        left: BinOp(
            BinOp {
                left: Var(
                    Var {
                        name: "a",
                    },
                ),
                right: Var(
                    Var {
                        name: "b",
                    },
                ),
                kind: Sub,
            },
        ),
        right: Var(
            Var {
                name: "c",
            },
        ),
        kind: Add,
    },
)
